fix: viewport overflow on .grift-card element
-add empty div to keep space via grow/shrink
-change .grift-card width, max-width, etc
-rename .contain-grift to .grift-card & vice-versa

--- a/style.css
+++ b/style.css
@@ -155,10 +155,11 @@ h3 {
     font-weight: 700;
 }
 
-.contain-grift {
+.grift-card {
     align-self: center;
     display: flex;
-    width: 35rem;
+    max-width: 35rem;
+    width: 65%;
     padding-inline: 5rem;
     padding-block: 2rem;
     margin-block: 3rem;
@@ -167,11 +168,10 @@ h3 {
     border-radius: 8px;
 }
 
-.grift-card {
-    flex: 1;
+.contain-grift {
+    flex: 7;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
 }
 
 .grift-title {
@@ -183,9 +183,17 @@ h3 {
     padding: 0;
     margin:0;
     font-size: 0.75rem;
+    min-width: 10rem;
+    text-wrap: wrap;
+}
+
+.grift-empty {
+    flex: 2;
 }
 
 .signup2 {
+    align-self: center;
+    
     padding-inline: 1.3rem;
     padding-block: 0.3rem;
     border-radius: 6px;
